--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ocean travel -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Aavoilla ulapoilla
 url: http://www.gutenberg.org/ebooks/45161
